refactor: Reversão da alteração dos tipos relativos aos atributos: Cidade, Cobrador e Veículo nos modulos que os utilizam