@@ -1,5 +1,6 @@
 package com.system.controleDeRegistrosFinanceiros.relatorio.service;
 import com.system.controleDeRegistrosFinanceiros.authentication.model.User;
+import com.system.controleDeRegistrosFinanceiros.relatorio.mapper.DadosRelatorioMapper;
 import net.sf.jasperreports.engine.*;
 import net.sf.jasperreports.engine.data.JRBeanCollectionDataSource;
 import org.springframework.core.io.Resource;
@@ -9,7 +10,7 @@ import org.springframework.stereotype.Service;
 
 import com.system.controleDeRegistrosFinanceiros.cobranca.model.entity.Cobranca;
 import com.system.controleDeRegistrosFinanceiros.cobranca.repository.CobrancaRepository;
-import com.system.controleDeRegistrosFinanceiros.relatorio.model.CobrancaDiaria;
+import com.system.controleDeRegistrosFinanceiros.relatorio.model.DadosRelatorio;
 
 import java.io.InputStream;
 import java.time.LocalDate;
@@ -20,15 +21,21 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
-public class RelatorioService{
+public class RelatorioService {
 
     private final CobrancaRepository cobrancaRepository;
     private final ResourceLoader resourceLoader;
+    private final DadosRelatorioMapper dadosRelatorioMapper;
 
-    public RelatorioService(CobrancaRepository cobrancaRepository, ResourceLoader resourceLoader){
+    public RelatorioService(
+            CobrancaRepository cobrancaRepository,
+            ResourceLoader resourceLoader,
+            DadosRelatorioMapper dadosRelatorioMapper) {
+
         this.cobrancaRepository = cobrancaRepository;
         this.resourceLoader = resourceLoader;
-    };
+        this.dadosRelatorioMapper = dadosRelatorioMapper;
+    }
 
     public byte[] gerarRelatorioDiarioDeCobranca() throws Exception {
 
@@ -42,22 +49,22 @@ public class RelatorioService{
         double totalEspecie = 0;
         double totalFinal = 0;
 
-        List<CobrancaDiaria> dadosRelatorio = geraDadosDoRelatorio();
+        List<DadosRelatorio> dadosRelatorio = geraDadosDoRelatorio();
 
-        final Resource resource = resourceLoader.getResource("classpath:reports/cobranca-report.jrxml");
-        final InputStream inputStream = resource.getInputStream();
+        Resource resource = resourceLoader.getResource("classpath:reports/cobranca-report.jrxml");
+        InputStream inputStream = resource.getInputStream();
         JasperReport relatorioPrincipal = JasperCompileManager.compileReport(inputStream);
 
-        for (CobrancaDiaria cobrancaDiaria : dadosRelatorio) {
-            totalPix     += cobrancaDiaria.getValorPix();
-            totalVale    += cobrancaDiaria.getValorVale();
-            totalEspecie += cobrancaDiaria.getValorEspecie();
-            totalFinal += cobrancaDiaria.getValorTotal();
+        for (DadosRelatorio dados : dadosRelatorio) {
+            totalPix     += dados.getValorPix();
+            totalVale    += dados.getValorVale();
+            totalEspecie += dados.getValorEspecie();
+            totalFinal   += dados.getValorTotal();
         }
 
         Map<String, Object> parameters = new HashMap<>();
-        parameters.put("PERIODO", java.time.LocalDate.now());
-        parameters.put("DATA_EMISSAO", java.time.LocalDate.now());
+        parameters.put("PERIODO", LocalDate.now());
+        parameters.put("DATA_EMISSAO", LocalDate.now());
         parameters.put("USUARIO_EMITENTE", user.getName());
         parameters.put("REPORT_LOCALE", Locale.of("pt", "BR"));
         parameters.put("LOGO", "classpath:images/Logo_branca.png");
@@ -66,17 +73,20 @@ public class RelatorioService{
         parameters.put("TOTAL_VALE", totalVale);
         parameters.put("TOTAL_ESPECIE", totalEspecie);
 
-        JRBeanCollectionDataSource dataSource = new JRBeanCollectionDataSource(dadosRelatorio);
-        JasperPrint jasperPrint = JasperFillManager.fillReport(relatorioPrincipal, parameters, dataSource);
+        JRBeanCollectionDataSource dataSource =
+                new JRBeanCollectionDataSource(dadosRelatorio);
+
+        JasperPrint jasperPrint =
+                JasperFillManager.fillReport(relatorioPrincipal, parameters, dataSource);
 
         return JasperExportManager.exportReportToPdf(jasperPrint);
     }
 
-    public List<CobrancaDiaria> geraDadosDoRelatorio(){
-            List<Cobranca> cobrancasDoDia = cobrancaRepository.findAllByData(LocalDate.now());
-            List<CobrancaDiaria> dadosRelatorio = cobrancasDoDia.stream()
-                                                                     .map(CobrancaDiaria::new)
-                                                                     .collect(Collectors.toList());
-        return dadosRelatorio;
+    public List<DadosRelatorio> geraDadosDoRelatorio() {
+
+        return cobrancaRepository.findAllByData(LocalDate.now())
+                .stream()
+                .map(dadosRelatorioMapper::toRelatorio)
+                .toList();
     }
 }
